force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/PNG_Account__c.field-meta.xml
<CustomField>
    <fullName>PNG_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PNG_Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>