force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/PNG_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PNG_AccountManager__c</fullName>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>