force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/PNG_AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>PNG_AccountStatus__c</fullName>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>