force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/PNG_AvailableBalanceK__c.field-meta.xml
<CustomField>
    <fullName>PNG_AvailableBalanceK__c</fullName>
    <label>Available Balance(K)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>