force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/PNG_ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>PNG_ContactNumber__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>