force-app/main/default/objects/PNG_TarkaInvoicePayment__c/fields/Tarka_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Tarka_Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarka Customer ID</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>BAN__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.PNG_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>BAN__c.BillingSystem__c</field>
            <operation>equals</operation>
            <value>Tarka</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BAN__c</referenceTo>
    <relationshipLabel>Tarka Invoice Payments</relationshipLabel>
    <relationshipName>Tarka_Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>