force-app/main/default/objects/PNG_TarkaInvoicePayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PNG_TarkaId__c</columns>
    <columns>PNG_CustomerName__c</columns>
    <columns>PNG_TotalChargeK__c</columns>
    <columns>PNG_TotalPaymentK__c</columns>
    <columns>PNG_AvailableBalanceK__c</columns>
    <columns>PNG_ServiceMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>